tests/kulezi_tests/good/simple_incr.lat
int main() {
    int x;
    printInt(x);
    x++;
    printInt(x);
    x++;
    printInt(x);
    x++;
    printInt(x);
    return 0;
}